@@ -187,7 +187,7 @@ const char *synce_info_get_local_ip(SynceInfo *info);
 int synce_info_get_partner_id_1(SynceInfo *info);
 int synce_info_get_partner_id_2(SynceInfo *info);
 
-int synce_info_get_fd(SynceInfo *info);
+const char *synce_info_get_object_path(SynceInfo *info);
 pid_t synce_info_get_dccm_pid(SynceInfo *info);
 const char *synce_info_get_transport(SynceInfo *info);
 const char *synce_info_get_password(SynceInfo *info);
